--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.language": ",es",
     "cSpell.ignoreWords": [
+        "categoria",
         "detail",
+        "formapago",
         "introduccion"
     ]
 }
